--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1010,12 +1010,14 @@
 "time_minutes_ago" = "$1 минут назад";
 "time_today" = "сегодня";
 "time_yesterday" = "вчера";
+
+"news" = "Новости";
+"news_more" = "Подробнее »";
 "points" = "Голоса";
 "points_count" = "голосов";
 "on_your_account" = "на вашем счету";
 "top_up_your_account" = "Пополнить баланс";
 "you_still_have_x_points" = "У Вас <b>$1</b> неиспользованных голосов.";
-"news_more" = "Подробнее";
 "vouchers" = "Ваучеры";
 "have_voucher" = "Есть ваучер";
 "voucher_token" = "Код ваучера";
