resolve bec9079e363b7622988f8a8a2bab16da2dd3e8e8 (locale-uk)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1551,6 +1551,8 @@
 "admin_about_instance" = "Інстанція";
 "admin_commerce_disabled" = "Комерція відключена системним адміністратором";
 "admin_commerce_disabled_desc" = "Налаштування ваучерів та подарунків будуть збережені, але не матимуть впливу.";
+"admin_privacy_warning" = "Ставитися до цієї інформації обережно — халатне відношення або поширення через особисті мотиви можуть призвести до відповідних наслідків!";
+
 "admin_longpool_broken" = "Longpool пошкоджено!";
 "admin_longpool_broken_desc" = "Перевірте існування файла за шляхом <code>$1</code> і чи видані в нього правильні права на запис.";
 "admin_banned_links" = "Заблоковані посилання";
@@ -1648,6 +1650,7 @@
 "edit_action" = "Змінити";
 "transfer" = "Передати";
 "close" = "Закрити";
+"success" = "Виконано";
 "warning" = "Увага";
 "question_confirm" = "Цю дію не можна скасувати. Ви переконані що хочете це зробити?";
 "confirm_m" = "Підтвердити";
@@ -1665,6 +1668,23 @@
 
 "cookies_popup_content" = "Цей вебсайт використовує cookies для того, щоб ідентифікувати Вашу сесію і нічого більше. Ознайомтеся з нашою <a href='/privacy'>політикою конфіденційності</a> для отримання додаткової інформації.";
 "cookies_popup_agree" = "Згоден";
+
+/* Blacklist */
+"blacklist" = "Чорний список";
+"user_blacklisted_you" = "Ви у чорному списку цього користувача.";
+"user_blacklisted" = "$1 додано до Вашого чорного списку.";
+"user_removed_from_the_blacklist" = "$1 видалено з Вашого чорного списку.";
+"adding_to_bl_sure" = "Ви дійсно хочете внести $1 до чорного списку?";
+"bl_count_zero_desc" = "Ви ще не маєте користувачів у чорному списку";
+"bl_count_zero" = "Ваш чорний список пустий";
+"bl_count_one" = "Ваш чорний список має 1 користувач";
+"bl_count_few" = "Ваш чорний список має $1 користувачі";
+"bl_count_many" = "Ваш чорний список має $1 користувачів";
+"bl_count_other" = "Ваш чорний список має $1 користувачів";
+"you_blacklisted" = "Користувача $1 додано до чорного списку";
+"bl_add" = "Додати в чорний список";
+"bl_remove" = "Виключити з чорного списку";
+"addition_to_bl" = "Додати з чорного списку";
 
 /* Away */
 
