сука це піздець як так нахуй, сука вчу мову десь 3 роки а все одно роблю такі тупі помилки я їбав ту люсю

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1551,7 +1551,7 @@
 "admin_about_instance" = "Інстанція";
 "admin_commerce_disabled" = "Комерція відключена системним адміністратором";
 "admin_commerce_disabled_desc" = "Налаштування ваучерів та подарунків будуть збережені, але не матимуть впливу.";
-"admin_privacy_warning" = "Ставитися до цієї інформації обережно — халатне відношення або поширення через особисті мотиви можуть призвести до відповідних наслідків!";
+"admin_privacy_warning" = "Ставтесь до цієї інформації обережно — халатне відношення або поширення через особисті мотиви можуть призвести до відповідних наслідків!";
 
 "admin_longpool_broken" = "Longpool пошкоджено!";
 "admin_longpool_broken_desc" = "Перевірте існування файла за шляхом <code>$1</code> і чи видані в нього правильні права на запис.";
