--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1767,7 +1767,7 @@
 "poll_err_anonymous" = "Неможливо переглянути список тих, хто проголосував в анонімному голосуванні.";
 "cast_vote" = "Проголосувати!";
 "retract_vote" = "Скасовувати голос";
-"attach_video" = "Додати відео відео";
+"attach_video" = "Додати відео";
 "attach_geotag" = "Додати геомітку";
 "friends_list_other" = "Ви маєте $1 друга";
 "round_avatars" = "Круглі";
