resolve 4c9c650cff2210a388a9dc256fdadd81acc19771 (locale-uk)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -993,6 +993,9 @@
 "time_minutes_ago" = "$1 хвилину тому";
 "time_today" = "сьогодні";
 "time_yesterday" = "вчора";
+
+"news" = "Остання новина інстанції";
+"news_more" = "Дізнатися більше »";
 "points" = "Голоси";
 "points_count" = "голосів";
 "on_your_account" = "на Вашому рахунку";
