аудіо -> аудіозапис (-и -ів)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -701,9 +701,9 @@
 "ui_settings_rating_show" = "Показувати";
 "ui_settings_rating_hide" = "Приховувати";
 "ui_settings_nsfw_content" = "NSFW-контент";
-"ui_settings_nsfw_content_dont_show" = "Не показувати в глобальній стрічці";
-"ui_settings_nsfw_content_blur" = "Тільки розмазувати";
-"ui_settings_nsfw_content_show" = "Показувати";
+"ui_settings_nsfw_content_dont_show" = "Не відображати у глобальній стрічці";
+"ui_settings_nsfw_content_blur" = "Розмивати, при натисканні відобразити";
+"ui_settings_nsfw_content_show" = "Відображати";
 "ui_settings_view_of_posts" = "Вигляд дописів";
 "ui_settings_view_of_posts_old" = "Старий";
 "ui_settings_view_of_posts_microblog" = "Мікроблог";
@@ -818,7 +818,7 @@
 "upload_new_video" = "Завантажити нове відео";
 "max_attached_videos" = "Максимум 10 відеозаписів";
 "max_attached_photos" = "Максимум 10 фотографій";
-"max_attached_audios" = "Максимум 10 аудіо";
+"max_attached_audios" = "Максимум 10 аудіозаписів";
 "no_videos" = "Ви не маєте відео.";
 "no_videos_results" = "Немає результатів.";
 "video_file_upload" = "Завантажити файл";
@@ -828,10 +828,10 @@
 
 "my" = "Моє";
 "audios" = "Аудіозаписи";
-"audio" = "Аудіо";
+"audio" = "Аудіозапис";
 "playlist" = "Список відтворення";
-"upload_audio" = "Завантажити аудіо";
-"upload_audio_to_group" = "Завантажити аудіо в спільноту";
+"upload_audio" = "Завантажити аудіозапис";
+"upload_audio_to_group" = "Завантажити аудіозапис в спільноту";
 
 "performer" = "Виконавець";
 "audio_name" = "Назва";
@@ -841,17 +841,17 @@
 "select_another_file" = "Завантажити ще";
 
 "limits" = "Ліміти";
-"select_audio" = "Оберіть аудіо з Вашого пристрою";
-"audio_requirements" = "Аудіо має тривати від $1 секунди до $2 хвилин, мати розмір до $3 МБ та мати аудіопотік.";
-"audio_requirements_2" = "Аудіо не має порушувати авторські права";
-"you_can_also_add_audio_using" = "Ви також можете додати аудіо із переліку завантажених файлів за допомогою";
-"search_audio_inst" = "пошуку аудіо";
+"select_audio" = "Оберіть аудіозапис з Вашого пристрою";
+"audio_requirements" = "Аудіозапис має тривати від $1 секунди до $2 хвилин, мати розмір до $3 МБ та мати аудіопотік.";
+"audio_requirements_2" = "Аудіозапис не має порушувати авторські та суміжні права";
+"you_can_also_add_audio_using" = "Ви також можете додати аудіозапис з переліку завантажених файлів за допомогою";
+"search_audio_inst" = "пошуку аудіозаписів";
 
 "audio_embed_not_found" = "Аудіозапис не знайдено";
 "audio_embed_deleted" = "Аудіозапис видалено";
-"audio_embed_withdrawn" = "Аудіо було вилучено на вимогу правовласника";
-"audio_embed_forbidden" = "Налаштування конфіденційності користувача не дозволяють вбудовувати це аудіо";
-"audio_embed_processing" = "Аудіо ще обробляється або було оброблено неправильно.";
+"audio_embed_withdrawn" = "Аудіозапис було вилучено на вимогу правовласника";
+"audio_embed_forbidden" = "Налаштування конфіденційності користувача не дозволяють вбудовувати цей аудіозапис";
+"audio_embed_processing" = "Аудіозапис ще обробляється або було оброблено неправильно.";
 
 "audios_count_zero" = "Немає аудіозаписів";
 "audios_count_one" = "Один аудіозапис";
@@ -864,7 +864,7 @@
 
 "my_music" = "Моя музика";
 "music_user" = "Музика користувача";
-"music_club" = "Аудіозапис спільноти";
+"music_club" = "Аудіозаписи спільноти";
 "audio_new" = "Нове";
 "audio_popular" = "Популярні";
 "audio_search" = "Пошук";
@@ -879,14 +879,14 @@
 "owner" = "Власник";
 "searchable" = "Доступно у пошуку";
 
-"select_audio" = "Оберіть аудіо";
+"select_audio" = "Оберіть аудіозапис";
 "no_playlists_thisuser" = "Ви ще не додали жодного списку відтворення.";
 "no_playlists_user" = "Цей користувач ще не додав жодного списка відтворення.";
 "no_playlists_club" = "Ця спільнота не додала жодного списку відтворення.";
 
-"no_audios_thisuser" = "Ви ще не додали жодного аудіо.";
-"no_audios_user" = "Цей користувач не додав жодного аудіо.";
-"no_audios_club" = "Ця спільнота не додала жодного аудіо.";
+"no_audios_thisuser" = "Ви ще не додали жодного аудіозаписа.";
+"no_audios_user" = "Цей користувач не додав жодного аудіозапису.";
+"no_audios_club" = "Ця спільнота не додала жодного аудіозаписа.";
 
 "new_playlist" = "Створити список відтворення";
 "created_playlist" = "створений";
@@ -897,11 +897,11 @@
 "edit_playlist" = "Редагувати список відтворення";
 "unable_to_load_queue" = "Помилка при завантаженні черги.";
 
-"fully_delete_audio" = "Повністю видалити аудіо";
-"attach_audio" = "Прикріпити аудіо";
-"detach_audio" = "Відкріпити аудіо";
+"fully_delete_audio" = "Повністю видалити аудіозапис";
+"attach_audio" = "Прикріпити аудіозапис";
+"detach_audio" = "Відкріпити аудіозапис";
 
-"show_more_audios" = "Показати більше аудіо";
+"show_more_audios" = "Показати більше аудіозапис";
 "add_to_playlist" = "Додати до списку відтворення";
 "remove_from_playlist" = "Видалити зі списку відтворення";
 "delete_playlist" = "Видалити список відтворення";
@@ -923,8 +923,8 @@
 "listens_count_many" = "$1 прослуховувань";
 "listens_count_other" = "$1 слухає";
 
-"add_audio_to_club" = "Додати аудіо до спільноти";
-"add_audio" = "Додавання аудіо";
+"add_audio_to_club" = "Додати аудіозапис до спільноти";
+"add_audio" = "Додавання аудіозапис";
 "add_audio_limitations" = "Можна обрати до 10 спільнот/списків відтворення.";
 "to_club" = "В спільноту";
 "to_playlist" = "В список відтворення";
@@ -937,12 +937,12 @@
 "by_performer" = "за виконавцем";
 "no_access_clubs" = "Немає спільнот, де ви є адміністратором.";
 "no_access_playlists" = "Ви ще не створювали списки відтворювання.";
-"audio_successfully_uploaded" = "Аудіо було успішно завантажено і наразі обробляється.";
+"audio_successfully_uploaded" = "Аудіозапис було успішно завантажено і наразі обробляється.";
 
-"broadcast_audio" = "Трансляція аудіо до статусу";
+"broadcast_audio" = "Трансляція аудіозаписа до статусу";
 "sure_delete_playlist" = "Ви дійсно хочете видалити цей список відтворення?";
-"edit_audio" = "Редагувати аудіо";
-"audios_group" = "Аудіо зі спільноти";
+"edit_audio" = "Редагувати аудіозапис";
+"audios_group" = "Аудіозапис зі спільноти";
 "playlists_group" = "Списки відтворення зі спільноти";
 
 "play_tip" = "Відтворення/пауза";
@@ -1416,8 +1416,8 @@
 "invalid_user" = "Цього користувача не існує.";
 "ignored_sources_limit" = "Перевищено ліміт ігнорованих джерел.";
 
-"invalid_audio" = "Пошкоджене аудіо.";
-"do_not_have_audio" = "У вас немає цього аудіо";
+"invalid_audio" = "Аудіозапис пошкоджено.";
+"do_not_have_audio" = "У вас немає цього аудіозапису";
 "do_have_audio" = "Ви вже маєте цей аудіозапис.";
 
 "set_playlist_name" = "Введіть назву списка відвторення.";
