Better translation of privaty page

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -662,27 +662,27 @@
 "results_few" = "$1 результата";
 "results_many" = "$1 результатів";
 "results_other" = "$1 результатів";
-"privacy_setting_access_page" = "Кому в інтернеті видно мою сторінку";
-"privacy_setting_read_info" = "Кому видно основну інформацію моєї сторінки";
-"privacy_setting_see_groups" = "Кому видно мої спільноти й зустрічі";
-"privacy_setting_see_photos" = "Кому видно мої фотографії";
-"privacy_setting_see_videos" = "Кому видно мої відеозаписи";
-"privacy_setting_see_notes" = "Кому видно мої нотатки";
-"privacy_setting_see_friends" = "Кому видно моїх друзів";
-"privacy_setting_add_to_friends" = "Хто може називати мене другом";
-"privacy_setting_write_wall" = "Хто може писати у мене на стіні";
+"privacy_setting_access_page" = "Хто може оглядати мою сторінку в інтернеті";
+"privacy_setting_read_info" = "Хто може оглядати мою основну інформацію";
+"privacy_setting_write_wall" = "Хто може писати на моїй стіні";
+"privacy_setting_see_photos" = "Хто може оглядати мої фотографії";
+"privacy_setting_see_friends" = "Хто може оглядати мій список друзів";
+"privacy_setting_add_to_friends" = "Хто може посилати запити у друзі";
+"privacy_setting_see_videos" = "Хто може оглядати мої відеозаписи";
+"privacy_setting_view_audio" = "Хто може оглядати мої аудіозаписи та плейлисти";
 "privacy_setting_write_messages" = "Хто може писати мені повідомлення";
-"privacy_setting_view_audio" = "Хто може переглядати мої аудіо";
-"privacy_setting_see_likes" = "Хто може переглядати мої вподобання";
-"privacy_value_anybody" = "Усі охочі";
-"privacy_value_anybody_dative" = "Усім охочим";
-"privacy_value_users" = "Користувачам OpenVK";
+"privacy_setting_see_notes" = "Хто може оглядати мої нотатки";
+"privacy_setting_see_groups" = "Хто може оглядати мої спільноти та зустрічі";
+"privacy_setting_see_likes" = "Хто може оглядати, що Ви вподобали";
+"privacy_value_anybody" = "Усі";
+"privacy_value_anybody_dative" = "Усі";
+"privacy_value_users" = "Користувачі інстанції";
 "privacy_value_friends" = "Друзі";
-"privacy_value_friends_dative" = "Друзям";
+"privacy_value_friends_dative" = "Друзі";
 "privacy_value_only_me" = "Тільки я";
-"privacy_value_only_me_dative" = "Тільки мені";
+"privacy_value_only_me_dative" = "Тільки я";
 "privacy_value_nobody" = "Ніхто";
-"profile_type" = "Тип профіля";
+"profile_type" = "Тип профілю";
 "profile_type_open" = "Відкритий";
 "profile_type_closed" = "Закритий";
 "your_email_address" = "Адреса Вашої електронної пошти";
