feat(ajax): add ability to turn off ajax routing
there is no logic in this checkbox place but i didnt knew where to put it.

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -237,6 +237,7 @@
 "posts_per_page" = "Number of posts per page";
 "show_ignored_sources" = "Show ignored sources";
 "auto_scroll" = "Autoscroll";
+"ajax_routing" = "AJAX-transitions";
 
 "attachment" = "Attachment";
 "post_as_group" = "Post as group";
