--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -219,6 +219,7 @@
 "posts_per_page" = "Кількість записів на сторінці";
 "show_ignored_sources" = "Відображати ігноровані джерела";
 "auto_scroll" = "Автоматичне прокручування";
+"ajax_routing" = "AJAX-переходи";
 "attachment" = "Вкладення";
 "post_as_group" = "Від імені спільноти";
 "comment_as_group" = "Від імені спільноти";
